@@ -1,0 +1,55 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<title>jQuery validation plug-in - comment form example</title>
+
+<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+<!-- for styling the form -->
+<script src="js/cmxforms.js" type="text/javascript"></script>
+
+<script src="../lib/jquery.js" type="text/javascript"></script>
+<script src="../lib/jquery.delegate.js" type="text/javascript"></script>
+<script src="../jquery.validate.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+$(document).ready(function() {
+	$("#commentForm").validate();
+});
+</script>
+
+<style type="text/css">
+#commentForm { width: 500px; }
+#commentForm label { width: 250px; }
+#commentForm label.error, #commentForm input.submit { margin-left: 253px; }
+</style>
+
+</head>
+<body>
+
+<form class="cmxform" id="commentForm" method="post" action="">
+	<fieldset>
+		<legend>Please provide your name, email address (won't be published) and a comment</legend>
+		<p>
+			<label for="cname">Name (required, at least 2 characters)</label>
+			<input id="cname" name="name" class="required" minlength="2" />
+		<p>
+			<label for="cemail">E-Mail (required)</label>
+			<input id="cemail" name="email" class="required email" />
+		</p>
+		<p>
+			<label for="curl">URL (optional)</label>
+			<input id="curl" name="url" class="url" value="" />
+		</p>
+		<p>
+			<label for="ccomment">Your comment (required)</label>
+			<textarea id="ccomment" name="comment" class="required"></textarea>
+		</p>
+		<p>
+			<input class="submit" type="submit" value="Submit"/>
+		</p>
+	</fieldset>
+</form>
+
+</body>
+</html>
