@@ -7,8 +7,6 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="js/cmxforms.js" type="text/javascript"></script>
-<script src="../lib/jquery.metadata.js" type="text/javascript"></script>
-<script src="../lib/jquery.ajaxQueue.js" type="text/javascript"></script>
 <script src="../lib/jquery.delegate.js" type="text/javascript"></script>
 <script src="../jquery.validate.js" type="text/javascript"></script>
 
@@ -28,7 +26,7 @@ $().ready(function() {
 			lastname: "required",
 			username: {
 				required: true,
-				minLength: 2
+				minlength: 2
 			},
 			password: {
 				required: true,
@@ -36,7 +34,7 @@ $().ready(function() {
 			},
 			confirm_password: {
 				required: true,
-				minLength: 5,
+				minlength: 5,
 				equalTo: "#password"
 			},
 			email: {
@@ -119,21 +117,21 @@ $().ready(function() {
 
 <form class="cmxform" id="commentForm" method="get" action="">
 	<fieldset>
-		<legend>A simple comment form with submit validation and default messages</legend>
+		<legend>Please provide your name, email address (won't be published) and a comment</legend>
 		<p>
 			<label for="cname">Name (required, at least 2 characters)</label>
-			<input id="cname" name="name" class="some other styles {required:true,minLength:2}" />
+			<input id="cname" name="name" class="required" minlength="2" />
 		<p>
 			<label for="cemail">E-Mail (required)</label>
-			<input id="cemail" name="email" class="{required:true,email:true}" />
+			<input id="cemail" name="email" class="required email" />
 		</p>
 		<p>
 			<label for="curl">URL (optional)</label>
-			<input id="curl" name="url" class="{url:true}" value="" />
+			<input id="curl" name="url" class="url" value="" />
 		</p>
 		<p>
 			<label for="ccomment">Your comment (required)</label>
-			<textarea id="ccomment" name="comment" class="{required:true}"></textarea>
+			<textarea id="ccomment" name="comment" class="required"></textarea>
 		</p>
 		<p>
 			<input class="submit" type="submit" value="Submit"/>
